<resources>
    <string name="app_name">Koken</string>
    <string name="txt_recipes_of_the_day">Recipes of the day</string>
    <string name="txt_popular_recipes">Popular Recipes</string>
    <string name="txt_creamy_broccoli_mac_and_cheese">Creamy Broccoli Mac and Cheese</string>
    <string name="txt_image_view">Image View</string>
    <string name="txt_recipe_name">Recipe Name</string>
    <string name="txt_description">Description</string>
    <string name="txt_1">1</string>
    <string name="txt_20">20</string>
    <string name="txt_vegan">Vegan</string>
    <string name="txt_search">Search</string>
    <string name="txt_hint_search">Search for recipes</string>
    <string name="detail">Detail</string>
    <string name="text_vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="txt_ingredients">Ingredients :</string>
    <string name="dummy_ingredients">8 ounces medium pasta shells,<br /> 2 tablespoons unsalted butter,<br /> 2 cloves garlic,<br /> minced 1 shallot,<br /> minced 2 tablespoons all-purpose flour,<br /> 1 1/3 cups whole milk,<br /> 1 cup half and half,<br /> 1 teaspoon Dijon mustard,<br /> Kosher salt and freshly ground black pepper,<br /> 3 cups chopped broccoli florets,<br /> 6 ounces extra-sharp cheddar cheese, grated</string>
    <string name="txt_directions">Directions :</string>
    <string name="tv_dummy_directions">1. In a large pot of boiling salted water, cook pasta according to package instructions; drain well.<br /> <br /> 2. Melt butter in a large skillet over medium high heat. Add garlic and shallot, and cook, stirring frequently, until fragrant, about 2 minutes.<br /> <br /> 3. Whisk in flour until lightly browned, about 1 minute. Gradually whisk in milk, half and half and Dijon until slightly thickened, about 3-4 minutes. If the mixture is too thick, add more milk as needed; season with salt and pepper, to taste. <br /> <br /> 4. Stir in pasta, broccoli and cheese until well combined, about 3-4 minutes. <br /> <br /> 5. Serve immediately.</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="email_profile">name@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="image_view">Image View</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_account">Change Account</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="privacy_and_setting">Privacy and Setting</string>
    <string name="logout">Logout</string>
    <string name="txt_email">Please enter your email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="txt_password">Please enter your password</string>
    <string name="text_login_button">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_regis_button">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="fullname">Fullname</string>
    <string name="txt_fullname">Please enter your fullname</string>
    <string name="username">Username</string>
    <string name="txt_username">Please enter your username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="txt_confirm_password">Please confirm your password</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="txt_save">Save</string>
    <string name="txt_saved">Saved</string>
</resources>