<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="result"
            type="com.kei.koken.models.Result" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F3F3">

                <ImageView
                    android:id="@+id/iv_popular_recipes"
                    android:layout_width="@dimen/_93dp"
                    android:layout_height="@dimen/_98dp"
                    android:layout_margin="@dimen/_20dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/txt_image_view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_title_popular_recipes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/txt_recipe_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_popular_recipes"
                    app:layout_constraintTop_toTopOf="@+id/iv_popular_recipes" />

                <TextView
                    android:id="@+id/tv_description_popular_recipes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxWidth="230dp"
                    android:maxLines="4"
                    android:text="@string/txt_description"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_popular_recipes"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_popular_recipes"
                    app:layout_constraintVertical_bias="0.0" />


                <ImageView
                    android:id="@+id/iv_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="104dp"
                    android:contentDescription="@string/txt_image_view"
                    app:layout_constraintStart_toEndOf="@+id/iv_popular_recipes"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_like" />

                <TextView
                    android:id="@+id/tv_likes_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_1"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_likes"
                    app:layout_constraintStart_toStartOf="@+id/iv_likes"
                    app:layout_constraintTop_toBottomOf="@+id/iv_likes"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/iiv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/txt_image_view"
                    app:layout_constraintStart_toEndOf="@+id/iv_likes"
                    app:layout_constraintTop_toTopOf="@+id/iv_likes"
                    app:srcCompat="@drawable/ic_time" />

                <TextView
                    android:id="@+id/tv_time_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_20"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iiv_time"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/iiv_time"
                    app:layout_constraintTop_toBottomOf="@+id/iiv_time"
                    app:layout_constraintVertical_bias="0.125" />

                <ImageView
                    android:id="@+id/iv_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iiv_time"
                    app:layout_constraintTop_toTopOf="@+id/iiv_time"
                    app:srcCompat="@drawable/ic_vegan" />

                <TextView
                    android:id="@+id/tv_vegan_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_vegan"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_vegan"
                    app:layout_constraintHorizontal_bias="0.533"
                    app:layout_constraintStart_toStartOf="@+id/iv_vegan"
                    app:layout_constraintTop_toBottomOf="@+id/iv_vegan"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/iv_save"
                    android:layout_width="@dimen/_15dp"
                    android:layout_height="@dimen/_15dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_vegan"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_vegan"
                    app:layout_constraintTop_toTopOf="@+id/iv_vegan"
                    app:srcCompat="@drawable/ic_saved" />

                <TextView
                    android:id="@+id/tv_save_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_save"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_save"
                    app:layout_constraintHorizontal_bias="0.533"
                    app:layout_constraintStart_toStartOf="@+id/iv_save"
                    app:layout_constraintTop_toBottomOf="@+id/iv_save"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
